--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
     <script>
       const hideFullScreenButton = "";
       const buildUrl = "Build";
-      const loaderUrl = buildUrl + "/humanChain.loader.js";
+      const loaderUrl = buildUrl + "/humanChain last.loader.js";
       const config = {
-        dataUrl: buildUrl + "/humanChain.data.unityweb",
-        frameworkUrl: buildUrl + "/humanChain.framework.js.unityweb",
-        codeUrl: buildUrl + "/humanChain.wasm.unityweb",
+        dataUrl: buildUrl + "/humanChain last.data.unityweb",
+        frameworkUrl: buildUrl + "/humanChain last.framework.js.unityweb",
+        codeUrl: buildUrl + "/humanChain last.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "PlayHolding",
         productName: "Human Chain",
