--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
     </div>
     <div id="unity-fullscreen-button" style="display: none;"></div>
     <script>
-      const hideFullScreenButton = "";
+      const hideFullScreenButton = "1";
       const buildUrl = "Build";
-      const loaderUrl = buildUrl + "/humanChain last.loader.js";
+      const loaderUrl = buildUrl + "/human Chain 0.3.loader.js";
       const config = {
-        dataUrl: buildUrl + "/humanChain last.data.unityweb",
-        frameworkUrl: buildUrl + "/humanChain last.framework.js.unityweb",
-        codeUrl: buildUrl + "/humanChain last.wasm.unityweb",
+        dataUrl: buildUrl + "/human Chain 0.3.data.unityweb",
+        frameworkUrl: buildUrl + "/human Chain 0.3.framework.js.unityweb",
+        codeUrl: buildUrl + "/human Chain 0.3.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
-        companyName: "PlayHolding",
+        companyName: "Numbase",
         productName: "Human Chain",
         productVersion: "1.2.4",
       };
