--- a/index.html
+++ b/index.html
@@ -26,15 +26,15 @@
 
       // const hideFullScreenButton = "";
       const buildUrl = "Build";
-      const loaderUrl = buildUrl + "/human chain.loader.js";
+      const loaderUrl = buildUrl + "/chain.loader.js";
       const config = {
-        dataUrl: buildUrl + "/human chain.data.unityweb",
-        frameworkUrl: buildUrl + "/human chain.framework.js.unityweb",
-        codeUrl: buildUrl + "/human chain.wasm.unityweb",
+        dataUrl: buildUrl + "/chain.data.unityweb",
+        frameworkUrl: buildUrl + "/chain.framework.js.unityweb",
+        codeUrl: buildUrl + "/chain.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "Numbase",
         productName: "Human Chain",
-        productVersion: "1.2.4 WebGL",
+        productVersion: "1.2.5",
       };
 
       const container = document.querySelector("#unity-container");
