--- a/index.html
+++ b/index.html
@@ -24,17 +24,17 @@
     <!-- <div id="unity-fullscreen-button" style="display: none;"></div> -->
     <script>
 
-      // const hideFullScreenButton = "";
+      // const hideFullScreenButton = "1";
       const buildUrl = "Build";
       const loaderUrl = buildUrl + "/humanChain.loader.js";
       const config = {
-        dataUrl: buildUrl + "/humanChain.data.unityweb",
-        frameworkUrl: buildUrl + "/humanChain.framework.js.unityweb",
-        codeUrl: buildUrl + "/humanChain.wasm.unityweb",
+        dataUrl: buildUrl + "/humanChain.data.br",
+        frameworkUrl: buildUrl + "/humanChain.framework.js.br",
+        codeUrl: buildUrl + "/humanChain.wasm.br",
         streamingAssetsUrl: "StreamingAssets",
-        companyName: "Numbase",
+        companyName: "PlayHolding",
         productName: "Human Chain",
-        productVersion: "web v0.1",
+        productVersion: "web 0.3",
       };
 
       const container = document.querySelector("#unity-container");
