--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
       const buildUrl = "Build";
       const loaderUrl = buildUrl + "/humanChain.loader.js";
       const config = {
-        dataUrl: buildUrl + "/humanChain.data.br",
-        frameworkUrl: buildUrl + "/humanChain.framework.js.br",
-        codeUrl: buildUrl + "/humanChain.wasm.br",
+        dataUrl: buildUrl + "/humanChain.data.unityweb",
+        frameworkUrl: buildUrl + "/humanChain.framework.js.unityweb",
+        codeUrl: buildUrl + "/humanChain.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "PlayHolding",
         productName: "Human Chain",
