--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
         frameworkUrl: buildUrl + "/humanChain.framework.js.unityweb",
         codeUrl: buildUrl + "/humanChain.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
-        companyName: "PlayHolding",
+        companyName: "Numbase",
         productName: "Human Chain",
-        productVersion: "web 0.31",
+        productVersion: "web 0.4",
       };
 
       const container = document.querySelector("#unity-container");
