--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         streamingAssetsUrl: "StreamingAssets",
         companyName: "Numbase",
         productName: "Human Chain",
-        productVersion: "web 0.4",
+        productVersion: "0.5",
       };
 
       const container = document.querySelector("#unity-container");
